dcu/src/y.output
   0  $accept : start $end

   1  $$1 :

   2  start : PROGRAM $$1 program

   3  program : NAME hedges functions variables rules reas

   4  hedges : hedges HEDGE NAME expr
   5         |

   6  $$2 :

   7  functions : functions FUNCTION NAME $$2 fdef
   8            |

   9  fdef : fdef FROM expr TO expr IS expr
  10       | FROM expr TO expr IS expr

  11  variables : variables vheader members
  12            |

  13  vheader : iotype NAME TYPE vtype RANGE snum TO snum STEP snum
  14          | iotype NAME TYPE vtype RANGE snum TO snum

  15  iotype : INPUT
  16         | OUTPUT

  17  vtype : QUAL DECL
  18        | QUAL
  19        | DECL
  20        |

  21  $$3 :

  22  members : members FUZZY NAME MEMBERS $$3 pairs

  23  $$4 :

  24  members : members FUZZY NAME FUNCTION NAME $$4 LBR args RBR
  25          |

  26  $$5 :

  27  rules : rules RULE NAME $$5 IF cond THEN ans
  28        |

  29  cond : NAME IS NAME
  30       | NAME IS NAME NAME
  31       | LBR cond RBR
  32       | cond AND cond
  33       | cond OR cond

  34  ans : NAME EQUALS NAME
  35      | NAME EQUALS NAME NAME

  36  args : args snum
  37       |

  38  pairs : pairs olb snum COMMA snum orb
  39        | olb snum COMMA snum orb

  40  olb : LBR
  41      |

  42  orb : RBR
  43      |

  44  snum : PLUS NUM
  45       | MINUS NUM
  46       | NUM

  47  expr : LBR expr RBR
  48       | expr PLUS expr
  49       | expr MINUS expr
  50       | expr MULT expr
  51       | expr DIV expr
  52       | expr EXP expr
  53       | expr LOR expr
  54       | expr LAND expr
  55       | MINUS expr
  56       | PLUS expr
  57       | NUM
  58       | NAME

  59  reas : REASONING MAXDOT
  60       | REASONING MAXMIN
  61       |

state 0
	$accept : . start $end  (0)

	PROGRAM  shift 1
	.  error

	start  goto 2


state 1
	start : PROGRAM . $$1 program  (2)
	$$1 : .  (1)

	.  reduce 1

	$$1  goto 3


state 2
	$accept : start . $end  (0)

	$end  accept


state 3
	start : PROGRAM $$1 . program  (2)

	NAME  shift 4
	.  error

	program  goto 5


state 4
	program : NAME . hedges functions variables rules reas  (3)
	hedges : .  (5)

	.  reduce 5

	hedges  goto 6


state 5
	start : PROGRAM $$1 program .  (2)

	.  reduce 2


state 6
	program : NAME hedges . functions variables rules reas  (3)
	hedges : hedges . HEDGE NAME expr  (4)
	functions : .  (8)

	HEDGE  shift 7
	$end  reduce 8
	FUNCTION  reduce 8
	INPUT  reduce 8
	OUTPUT  reduce 8
	RULE  reduce 8
	REASONING  reduce 8

	functions  goto 8


state 7
	hedges : hedges HEDGE . NAME expr  (4)

	NAME  shift 9
	.  error


state 8
	program : NAME hedges functions . variables rules reas  (3)
	functions : functions . FUNCTION NAME $$2 fdef  (7)
	variables : .  (12)

	FUNCTION  shift 10
	$end  reduce 12
	INPUT  reduce 12
	OUTPUT  reduce 12
	RULE  reduce 12
	REASONING  reduce 12

	variables  goto 11


state 9
	hedges : hedges HEDGE NAME . expr  (4)

	LBR  shift 12
	NAME  shift 13
	NUM  shift 14
	PLUS  shift 15
	MINUS  shift 16
	.  error

	expr  goto 17


state 10
	functions : functions FUNCTION . NAME $$2 fdef  (7)

	NAME  shift 18
	.  error


state 11
	program : NAME hedges functions variables . rules reas  (3)
	variables : variables . vheader members  (11)
	rules : .  (28)

	INPUT  shift 19
	OUTPUT  shift 20
	$end  reduce 28
	RULE  reduce 28
	REASONING  reduce 28

	iotype  goto 21
	rules  goto 22
	vheader  goto 23


state 12
	expr : LBR . expr RBR  (47)

	LBR  shift 12
	NAME  shift 13
	NUM  shift 14
	PLUS  shift 15
	MINUS  shift 16
	.  error

	expr  goto 24


state 13
	expr : NAME .  (58)

	.  reduce 58


state 14
	expr : NUM .  (57)

	.  reduce 57


state 15
	expr : PLUS . expr  (56)

	LBR  shift 12
	NAME  shift 13
	NUM  shift 14
	PLUS  shift 15
	MINUS  shift 16
	.  error

	expr  goto 25


state 16
	expr : MINUS . expr  (55)

	LBR  shift 12
	NAME  shift 13
	NUM  shift 14
	PLUS  shift 15
	MINUS  shift 16
	.  error

	expr  goto 26


state 17
	hedges : hedges HEDGE NAME expr .  (4)
	expr : expr . PLUS expr  (48)
	expr : expr . MINUS expr  (49)
	expr : expr . MULT expr  (50)
	expr : expr . DIV expr  (51)
	expr : expr . EXP expr  (52)
	expr : expr . LOR expr  (53)
	expr : expr . LAND expr  (54)

	PLUS  shift 27
	MINUS  shift 28
	MULT  shift 29
	DIV  shift 30
	EXP  shift 31
	LAND  shift 32
	LOR  shift 33
	$end  reduce 4
	FUNCTION  reduce 4
	INPUT  reduce 4
	OUTPUT  reduce 4
	RULE  reduce 4
	REASONING  reduce 4
	HEDGE  reduce 4


state 18
	functions : functions FUNCTION NAME . $$2 fdef  (7)
	$$2 : .  (6)

	.  reduce 6

	$$2  goto 34


state 19
	iotype : INPUT .  (15)

	.  reduce 15


state 20
	iotype : OUTPUT .  (16)

	.  reduce 16


state 21
	vheader : iotype . NAME TYPE vtype RANGE snum TO snum STEP snum  (13)
	vheader : iotype . NAME TYPE vtype RANGE snum TO snum  (14)

	NAME  shift 35
	.  error


state 22
	program : NAME hedges functions variables rules . reas  (3)
	rules : rules . RULE NAME $$5 IF cond THEN ans  (27)
	reas : .  (61)

	RULE  shift 36
	REASONING  shift 37
	$end  reduce 61

	reas  goto 38


state 23
	variables : variables vheader . members  (11)
	members : .  (25)

	.  reduce 25

	members  goto 39


state 24
	expr : LBR expr . RBR  (47)
	expr : expr . PLUS expr  (48)
	expr : expr . MINUS expr  (49)
	expr : expr . MULT expr  (50)
	expr : expr . DIV expr  (51)
	expr : expr . EXP expr  (52)
	expr : expr . LOR expr  (53)
	expr : expr . LAND expr  (54)

	PLUS  shift 27
	MINUS  shift 28
	MULT  shift 29
	DIV  shift 30
	EXP  shift 31
	LAND  shift 32
	LOR  shift 33
	RBR  shift 40
	.  error


state 25
	expr : expr . PLUS expr  (48)
	expr : expr . MINUS expr  (49)
	expr : expr . MULT expr  (50)
	expr : expr . DIV expr  (51)
	expr : expr . EXP expr  (52)
	expr : expr . LOR expr  (53)
	expr : expr . LAND expr  (54)
	expr : PLUS expr .  (56)

	LAND  shift 32
	LOR  shift 33
	$end  reduce 56
	FUNCTION  reduce 56
	INPUT  reduce 56
	OUTPUT  reduce 56
	TO  reduce 56
	RULE  reduce 56
	REASONING  reduce 56
	HEDGE  reduce 56
	FROM  reduce 56
	IS  reduce 56
	PLUS  reduce 56
	MINUS  reduce 56
	MULT  reduce 56
	DIV  reduce 56
	EXP  reduce 56
	RBR  reduce 56


state 26
	expr : expr . PLUS expr  (48)
	expr : expr . MINUS expr  (49)
	expr : expr . MULT expr  (50)
	expr : expr . DIV expr  (51)
	expr : expr . EXP expr  (52)
	expr : expr . LOR expr  (53)
	expr : expr . LAND expr  (54)
	expr : MINUS expr .  (55)

	LAND  shift 32
	LOR  shift 33
	$end  reduce 55
	FUNCTION  reduce 55
	INPUT  reduce 55
	OUTPUT  reduce 55
	TO  reduce 55
	RULE  reduce 55
	REASONING  reduce 55
	HEDGE  reduce 55
	FROM  reduce 55
	IS  reduce 55
	PLUS  reduce 55
	MINUS  reduce 55
	MULT  reduce 55
	DIV  reduce 55
	EXP  reduce 55
	RBR  reduce 55


state 27
	expr : expr PLUS . expr  (48)

	LBR  shift 12
	NAME  shift 13
	NUM  shift 14
	PLUS  shift 15
	MINUS  shift 16
	.  error

	expr  goto 41


state 28
	expr : expr MINUS . expr  (49)

	LBR  shift 12
	NAME  shift 13
	NUM  shift 14
	PLUS  shift 15
	MINUS  shift 16
	.  error

	expr  goto 42


state 29
	expr : expr MULT . expr  (50)

	LBR  shift 12
	NAME  shift 13
	NUM  shift 14
	PLUS  shift 15
	MINUS  shift 16
	.  error

	expr  goto 43


state 30
	expr : expr DIV . expr  (51)

	LBR  shift 12
	NAME  shift 13
	NUM  shift 14
	PLUS  shift 15
	MINUS  shift 16
	.  error

	expr  goto 44


state 31
	expr : expr EXP . expr  (52)

	LBR  shift 12
	NAME  shift 13
	NUM  shift 14
	PLUS  shift 15
	MINUS  shift 16
	.  error

	expr  goto 45


state 32
	expr : expr LAND . expr  (54)

	LBR  shift 12
	NAME  shift 13
	NUM  shift 14
	PLUS  shift 15
	MINUS  shift 16
	.  error

	expr  goto 46


state 33
	expr : expr LOR . expr  (53)

	LBR  shift 12
	NAME  shift 13
	NUM  shift 14
	PLUS  shift 15
	MINUS  shift 16
	.  error

	expr  goto 47


state 34
	functions : functions FUNCTION NAME $$2 . fdef  (7)

	FROM  shift 48
	.  error

	fdef  goto 49


state 35
	vheader : iotype NAME . TYPE vtype RANGE snum TO snum STEP snum  (13)
	vheader : iotype NAME . TYPE vtype RANGE snum TO snum  (14)

	TYPE  shift 50
	.  error


state 36
	rules : rules RULE . NAME $$5 IF cond THEN ans  (27)

	NAME  shift 51
	.  error


state 37
	reas : REASONING . MAXDOT  (59)
	reas : REASONING . MAXMIN  (60)

	MAXDOT  shift 52
	MAXMIN  shift 53
	.  error


state 38
	program : NAME hedges functions variables rules reas .  (3)

	.  reduce 3


state 39
	variables : variables vheader members .  (11)
	members : members . FUZZY NAME MEMBERS $$3 pairs  (22)
	members : members . FUZZY NAME FUNCTION NAME $$4 LBR args RBR  (24)

	FUZZY  shift 54
	$end  reduce 11
	INPUT  reduce 11
	OUTPUT  reduce 11
	RULE  reduce 11
	REASONING  reduce 11


state 40
	expr : LBR expr RBR .  (47)

	.  reduce 47


state 41
	expr : expr . PLUS expr  (48)
	expr : expr PLUS expr .  (48)
	expr : expr . MINUS expr  (49)
	expr : expr . MULT expr  (50)
	expr : expr . DIV expr  (51)
	expr : expr . EXP expr  (52)
	expr : expr . LOR expr  (53)
	expr : expr . LAND expr  (54)

	MULT  shift 29
	DIV  shift 30
	EXP  shift 31
	LAND  shift 32
	LOR  shift 33
	$end  reduce 48
	FUNCTION  reduce 48
	INPUT  reduce 48
	OUTPUT  reduce 48
	TO  reduce 48
	RULE  reduce 48
	REASONING  reduce 48
	HEDGE  reduce 48
	FROM  reduce 48
	IS  reduce 48
	PLUS  reduce 48
	MINUS  reduce 48
	RBR  reduce 48


state 42
	expr : expr . PLUS expr  (48)
	expr : expr . MINUS expr  (49)
	expr : expr MINUS expr .  (49)
	expr : expr . MULT expr  (50)
	expr : expr . DIV expr  (51)
	expr : expr . EXP expr  (52)
	expr : expr . LOR expr  (53)
	expr : expr . LAND expr  (54)

	MULT  shift 29
	DIV  shift 30
	EXP  shift 31
	LAND  shift 32
	LOR  shift 33
	$end  reduce 49
	FUNCTION  reduce 49
	INPUT  reduce 49
	OUTPUT  reduce 49
	TO  reduce 49
	RULE  reduce 49
	REASONING  reduce 49
	HEDGE  reduce 49
	FROM  reduce 49
	IS  reduce 49
	PLUS  reduce 49
	MINUS  reduce 49
	RBR  reduce 49


state 43
	expr : expr . PLUS expr  (48)
	expr : expr . MINUS expr  (49)
	expr : expr . MULT expr  (50)
	expr : expr MULT expr .  (50)
	expr : expr . DIV expr  (51)
	expr : expr . EXP expr  (52)
	expr : expr . LOR expr  (53)
	expr : expr . LAND expr  (54)

	EXP  shift 31
	LAND  shift 32
	LOR  shift 33
	$end  reduce 50
	FUNCTION  reduce 50
	INPUT  reduce 50
	OUTPUT  reduce 50
	TO  reduce 50
	RULE  reduce 50
	REASONING  reduce 50
	HEDGE  reduce 50
	FROM  reduce 50
	IS  reduce 50
	PLUS  reduce 50
	MINUS  reduce 50
	MULT  reduce 50
	DIV  reduce 50
	RBR  reduce 50


state 44
	expr : expr . PLUS expr  (48)
	expr : expr . MINUS expr  (49)
	expr : expr . MULT expr  (50)
	expr : expr . DIV expr  (51)
	expr : expr DIV expr .  (51)
	expr : expr . EXP expr  (52)
	expr : expr . LOR expr  (53)
	expr : expr . LAND expr  (54)

	EXP  shift 31
	LAND  shift 32
	LOR  shift 33
	$end  reduce 51
	FUNCTION  reduce 51
	INPUT  reduce 51
	OUTPUT  reduce 51
	TO  reduce 51
	RULE  reduce 51
	REASONING  reduce 51
	HEDGE  reduce 51
	FROM  reduce 51
	IS  reduce 51
	PLUS  reduce 51
	MINUS  reduce 51
	MULT  reduce 51
	DIV  reduce 51
	RBR  reduce 51


state 45
	expr : expr . PLUS expr  (48)
	expr : expr . MINUS expr  (49)
	expr : expr . MULT expr  (50)
	expr : expr . DIV expr  (51)
	expr : expr . EXP expr  (52)
	expr : expr EXP expr .  (52)
	expr : expr . LOR expr  (53)
	expr : expr . LAND expr  (54)

	LAND  shift 32
	LOR  shift 33
	$end  reduce 52
	FUNCTION  reduce 52
	INPUT  reduce 52
	OUTPUT  reduce 52
	TO  reduce 52
	RULE  reduce 52
	REASONING  reduce 52
	HEDGE  reduce 52
	FROM  reduce 52
	IS  reduce 52
	PLUS  reduce 52
	MINUS  reduce 52
	MULT  reduce 52
	DIV  reduce 52
	EXP  reduce 52
	RBR  reduce 52


state 46
	expr : expr . PLUS expr  (48)
	expr : expr . MINUS expr  (49)
	expr : expr . MULT expr  (50)
	expr : expr . DIV expr  (51)
	expr : expr . EXP expr  (52)
	expr : expr . LOR expr  (53)
	expr : expr . LAND expr  (54)
	expr : expr LAND expr .  (54)

	.  reduce 54


state 47
	expr : expr . PLUS expr  (48)
	expr : expr . MINUS expr  (49)
	expr : expr . MULT expr  (50)
	expr : expr . DIV expr  (51)
	expr : expr . EXP expr  (52)
	expr : expr . LOR expr  (53)
	expr : expr LOR expr .  (53)
	expr : expr . LAND expr  (54)

	.  reduce 53


state 48
	fdef : FROM . expr TO expr IS expr  (10)

	LBR  shift 12
	NAME  shift 13
	NUM  shift 14
	PLUS  shift 15
	MINUS  shift 16
	.  error

	expr  goto 55


state 49
	functions : functions FUNCTION NAME $$2 fdef .  (7)
	fdef : fdef . FROM expr TO expr IS expr  (9)

	FROM  shift 56
	$end  reduce 7
	FUNCTION  reduce 7
	INPUT  reduce 7
	OUTPUT  reduce 7
	RULE  reduce 7
	REASONING  reduce 7


state 50
	vheader : iotype NAME TYPE . vtype RANGE snum TO snum STEP snum  (13)
	vheader : iotype NAME TYPE . vtype RANGE snum TO snum  (14)
	vtype : .  (20)

	QUAL  shift 57
	DECL  shift 58
	RANGE  reduce 20

	vtype  goto 59


state 51
	rules : rules RULE NAME . $$5 IF cond THEN ans  (27)
	$$5 : .  (26)

	.  reduce 26

	$$5  goto 60


state 52
	reas : REASONING MAXDOT .  (59)

	.  reduce 59


state 53
	reas : REASONING MAXMIN .  (60)

	.  reduce 60


state 54
	members : members FUZZY . NAME MEMBERS $$3 pairs  (22)
	members : members FUZZY . NAME FUNCTION NAME $$4 LBR args RBR  (24)

	NAME  shift 61
	.  error


state 55
	fdef : FROM expr . TO expr IS expr  (10)
	expr : expr . PLUS expr  (48)
	expr : expr . MINUS expr  (49)
	expr : expr . MULT expr  (50)
	expr : expr . DIV expr  (51)
	expr : expr . EXP expr  (52)
	expr : expr . LOR expr  (53)
	expr : expr . LAND expr  (54)

	TO  shift 62
	PLUS  shift 27
	MINUS  shift 28
	MULT  shift 29
	DIV  shift 30
	EXP  shift 31
	LAND  shift 32
	LOR  shift 33
	.  error


state 56
	fdef : fdef FROM . expr TO expr IS expr  (9)

	LBR  shift 12
	NAME  shift 13
	NUM  shift 14
	PLUS  shift 15
	MINUS  shift 16
	.  error

	expr  goto 63


state 57
	vtype : QUAL . DECL  (17)
	vtype : QUAL .  (18)

	DECL  shift 64
	RANGE  reduce 18


state 58
	vtype : DECL .  (19)

	.  reduce 19


state 59
	vheader : iotype NAME TYPE vtype . RANGE snum TO snum STEP snum  (13)
	vheader : iotype NAME TYPE vtype . RANGE snum TO snum  (14)

	RANGE  shift 65
	.  error


state 60
	rules : rules RULE NAME $$5 . IF cond THEN ans  (27)

	IF  shift 66
	.  error


state 61
	members : members FUZZY NAME . MEMBERS $$3 pairs  (22)
	members : members FUZZY NAME . FUNCTION NAME $$4 LBR args RBR  (24)

	FUNCTION  shift 67
	MEMBERS  shift 68
	.  error


state 62
	fdef : FROM expr TO . expr IS expr  (10)

	LBR  shift 12
	NAME  shift 13
	NUM  shift 14
	PLUS  shift 15
	MINUS  shift 16
	.  error

	expr  goto 69


state 63
	fdef : fdef FROM expr . TO expr IS expr  (9)
	expr : expr . PLUS expr  (48)
	expr : expr . MINUS expr  (49)
	expr : expr . MULT expr  (50)
	expr : expr . DIV expr  (51)
	expr : expr . EXP expr  (52)
	expr : expr . LOR expr  (53)
	expr : expr . LAND expr  (54)

	TO  shift 70
	PLUS  shift 27
	MINUS  shift 28
	MULT  shift 29
	DIV  shift 30
	EXP  shift 31
	LAND  shift 32
	LOR  shift 33
	.  error


state 64
	vtype : QUAL DECL .  (17)

	.  reduce 17


state 65
	vheader : iotype NAME TYPE vtype RANGE . snum TO snum STEP snum  (13)
	vheader : iotype NAME TYPE vtype RANGE . snum TO snum  (14)

	NUM  shift 71
	PLUS  shift 72
	MINUS  shift 73
	.  error

	snum  goto 74


state 66
	rules : rules RULE NAME $$5 IF . cond THEN ans  (27)

	LBR  shift 75
	NAME  shift 76
	.  error

	cond  goto 77


state 67
	members : members FUZZY NAME FUNCTION . NAME $$4 LBR args RBR  (24)

	NAME  shift 78
	.  error


state 68
	members : members FUZZY NAME MEMBERS . $$3 pairs  (22)
	$$3 : .  (21)

	.  reduce 21

	$$3  goto 79


state 69
	fdef : FROM expr TO expr . IS expr  (10)
	expr : expr . PLUS expr  (48)
	expr : expr . MINUS expr  (49)
	expr : expr . MULT expr  (50)
	expr : expr . DIV expr  (51)
	expr : expr . EXP expr  (52)
	expr : expr . LOR expr  (53)
	expr : expr . LAND expr  (54)

	IS  shift 80
	PLUS  shift 27
	MINUS  shift 28
	MULT  shift 29
	DIV  shift 30
	EXP  shift 31
	LAND  shift 32
	LOR  shift 33
	.  error


state 70
	fdef : fdef FROM expr TO . expr IS expr  (9)

	LBR  shift 12
	NAME  shift 13
	NUM  shift 14
	PLUS  shift 15
	MINUS  shift 16
	.  error

	expr  goto 81


state 71
	snum : NUM .  (46)

	.  reduce 46


state 72
	snum : PLUS . NUM  (44)

	NUM  shift 82
	.  error


state 73
	snum : MINUS . NUM  (45)

	NUM  shift 83
	.  error


state 74
	vheader : iotype NAME TYPE vtype RANGE snum . TO snum STEP snum  (13)
	vheader : iotype NAME TYPE vtype RANGE snum . TO snum  (14)

	TO  shift 84
	.  error


state 75
	cond : LBR . cond RBR  (31)

	LBR  shift 75
	NAME  shift 76
	.  error

	cond  goto 85


state 76
	cond : NAME . IS NAME  (29)
	cond : NAME . IS NAME NAME  (30)

	IS  shift 86
	.  error


state 77
	rules : rules RULE NAME $$5 IF cond . THEN ans  (27)
	cond : cond . AND cond  (32)
	cond : cond . OR cond  (33)

	THEN  shift 87
	AND  shift 88
	OR  shift 89
	.  error


state 78
	members : members FUZZY NAME FUNCTION NAME . $$4 LBR args RBR  (24)
	$$4 : .  (23)

	.  reduce 23

	$$4  goto 90


state 79
	members : members FUZZY NAME MEMBERS $$3 . pairs  (22)
	olb : .  (41)

	LBR  shift 91
	NUM  reduce 41
	PLUS  reduce 41
	MINUS  reduce 41

	pairs  goto 92
	olb  goto 93


state 80
	fdef : FROM expr TO expr IS . expr  (10)

	LBR  shift 12
	NAME  shift 13
	NUM  shift 14
	PLUS  shift 15
	MINUS  shift 16
	.  error

	expr  goto 94


state 81
	fdef : fdef FROM expr TO expr . IS expr  (9)
	expr : expr . PLUS expr  (48)
	expr : expr . MINUS expr  (49)
	expr : expr . MULT expr  (50)
	expr : expr . DIV expr  (51)
	expr : expr . EXP expr  (52)
	expr : expr . LOR expr  (53)
	expr : expr . LAND expr  (54)

	IS  shift 95
	PLUS  shift 27
	MINUS  shift 28
	MULT  shift 29
	DIV  shift 30
	EXP  shift 31
	LAND  shift 32
	LOR  shift 33
	.  error


state 82
	snum : PLUS NUM .  (44)

	.  reduce 44


state 83
	snum : MINUS NUM .  (45)

	.  reduce 45


state 84
	vheader : iotype NAME TYPE vtype RANGE snum TO . snum STEP snum  (13)
	vheader : iotype NAME TYPE vtype RANGE snum TO . snum  (14)

	NUM  shift 71
	PLUS  shift 72
	MINUS  shift 73
	.  error

	snum  goto 96


state 85
	cond : LBR cond . RBR  (31)
	cond : cond . AND cond  (32)
	cond : cond . OR cond  (33)

	AND  shift 88
	OR  shift 89
	RBR  shift 97
	.  error


state 86
	cond : NAME IS . NAME  (29)
	cond : NAME IS . NAME NAME  (30)

	NAME  shift 98
	.  error


state 87
	rules : rules RULE NAME $$5 IF cond THEN . ans  (27)

	NAME  shift 99
	.  error

	ans  goto 100


state 88
	cond : cond AND . cond  (32)

	LBR  shift 75
	NAME  shift 76
	.  error

	cond  goto 101


state 89
	cond : cond OR . cond  (33)

	LBR  shift 75
	NAME  shift 76
	.  error

	cond  goto 102


state 90
	members : members FUZZY NAME FUNCTION NAME $$4 . LBR args RBR  (24)

	LBR  shift 103
	.  error


state 91
	olb : LBR .  (40)

	.  reduce 40


state 92
	members : members FUZZY NAME MEMBERS $$3 pairs .  (22)
	pairs : pairs . olb snum COMMA snum orb  (38)
	olb : .  (41)

	LBR  shift 91
	$end  reduce 22
	FUZZY  reduce 22
	INPUT  reduce 22
	OUTPUT  reduce 22
	RULE  reduce 22
	REASONING  reduce 22
	NUM  reduce 41
	PLUS  reduce 41
	MINUS  reduce 41

	olb  goto 104

